--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,14 @@
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "global": "^4.3.2",
+    "jwt-decode": "^2.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
