--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,11 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "presets": [
+    "env",
+    "react"
+  ],
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
@@ -21,8 +26,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "devDependencies": {
+    "jest": "^23.6.0",
+    "react-test-renderer": "^16.5.0"
+  }
 }
