--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "main": "server.js",
   "scripts": {
-    "test":"jest",
+    "test": "jest --watchAll",
     "client-install": "npm install --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js",
@@ -25,8 +25,8 @@
     "concurrently": "^4.0.1",
     "create-react-app": "^1.5.2",
     "express": "^4.16.3",
-    "global": "^4.3.2",
     "gravatar": "^1.6.0",
+    "helmet": "^3.13.0",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.12",
     "passport": "^0.4.0",
